# docket

./: .env.example  .gitignore  Docket-SPEC.md  LICENSE  NOTICE  README.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
demo-data/enron/: README.md  enron-10k-1999.txt  enron-10k-2000.txt  enron-8k-2001-11-08.txt  watkins-memo.txt
docs/: FIRST-WEEK.md  LIVING-MATTERS-BRIEF.md  MATTER-QUALITY-BRIEF.md  RESEARCH-HANDOFF-BRIEF.md  UI-BRIEF.md  architecture.md  ethics.md  living-matters-implementation.md  matter-quality-implementation.md  research-handoff-implementation.md
eval/: README.md  golden-set.jsonl  promptfoo.yaml  run.ts
reranker/: server.py
scripts/: brief.ts  ingest.ts  peek.ts  pull-models.sh  verify-offline.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  ollama_sidecar.rs  system_info.rs
src-tauri/src/ipc/: brief.rs  ingest.rs  matter.rs  mod.rs  source.rs  system.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/eval/: page.tsx
src/app/new-matter/: page.tsx
src/app/settings/: page.tsx
src/components/: AskAnything.tsx  FirstRunModal.tsx  Settings.tsx
src/components/brief/: BriefView.tsx  CitationFootnote.tsx  CitationPanel.tsx  ContradictionsPanel.tsx  citation-panel-store.ts
src/components/compliance/: EthicsFooter.tsx
src/components/eval/: EvalTable.tsx
src/lib/: chunk.ts  extract.ts  firstrun-store.ts  generate.ts  ground.ts  ingest.ts  lancedb.ts  license-store.ts  mock-data.ts  ocr.ts  ollama.ts  retrieve.ts  system-info.ts  types.ts  utils.ts
(+39 files in other folders)
