[package]
name = "docket"
version = "0.1.0"
edition = "2021"
description = "Docket — fully-local document analysis for solo lawyers."
authors = ["Scott Cognato"]
license = "MIT"

[lib]
name = "docket_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.1"
tauri-plugin-fs = "2.1"
tauri-plugin-dialog = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.32"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
